# space-simulator

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PROGRESS.md  README.md  THIRD_PARTY_LICENSES.md
.claude/skills/: wiki-document.md  wiki-ingest.md  wiki-lint.md  wiki-query.md  wiki-rename.md  wiki.md
.github/workflows/: ci.yml
cmake/: CPM_VERSION  apsis_compile_options.cmake  apsis_dependencies.cmake  coverage.cmake  coverage_check.cmake  fetch_external.cmake  fetch_large_data.cmake
data/: README.md  SHA256SUMS  egm2008_d20.tab  iers_eop_phase1.csv  iss_ref_vectors.json
docs/: 00-design-overview.md  01-architecture.md  02-subsystems.md  REQUIREMENTS.md  phase-0-plan.md  phase-1-plan.md  phase-1a-hardening-plan.md  structure.md
docs/meta/: wiki-citation-policy.md  wiki-conventions.md  wiki-system.md
docs/process/: software-development-plan.md  software-management-plan.md  software-test-plan.md
docs/raw/: INDEX.md
docs/raw/articles/: icgem-gfz-landing-snapshot.html
docs/raw/specs/: kelso-celestrak-gp-data-formats.html  kelso-celestrak-tle-format.html  pinocchio-docs-snapshot.html  ros-urdf-xml-spec.html  ros2-xacro-tutorial.html  urdfdom-docs-snapshot.html
docs/wiki/: index.md  log.md
docs/wiki/concepts/: analytical-rbd-derivatives.md  articulated-body-algorithm.md  attitude-estimation-policy.md  celestial-ephemeris-origin.md  celestial-intermediate-pole.md  composite-rigid-body-algorithm.md  conjunction-screening.md  earth-rotation-angle.md  f-and-g-series.md  farrenkopf-gyro-model.md  floating-base-dynamics.md  frame-bias.md  gauss-jackson-integration.md  generalized-rodrigues-parameters.md  iau-2006-precession.md  kalman-filter.md  long-arc-state-conditioning.md  mekf.md  pinocchio-library.md  precession-nutation.md  quaternion-attitude-representation.md  recursive-newton-euler-algorithm.md  sgp4.md  spatial-algebra.md  spherical-harmonic-geopotential.md  time-scales.md  unscented-kalman-filter.md  usque.md  variational-equations.md
docs/wiki/decisions/: 001-use-ceo-based-icrs-to-itrs.md  002-variational-equations-between-measurements.md  003-tagged-time-scale-types.md  004-hybrid-attitude-estimation-mode-logic.md  005-broad-phase-strategy-pluggable.md  006-cmake-cpm-build-system.md  007-googletest-test-framework.md  008-vendor-sofa-and-cspice.md  009-hand-rolled-integrator-family.md  010-phantom-typed-time-and-state.md  011-reference-data-shipping.md  012-eigen-with-apsis-math-aliases.md  013-class-d-software-classification.md
docs/wiki/lint-reports/: 2026-05-05-post-ingest-lint.md
docs/wiki/sources/: abramson-1966-nasa-sp-106-slosh.md  archinal-2018-iau-wgccre-2015.md  berry-healy-2004-gauss-jackson.md  berry-healy-2004-gj8-generator.md  bombardelli-2015-collision-avoidance.md  bowman-2008-jb2008.md  brouwer-1959-artificial-satellite-theory.md  capitaine-2003-iau2000-precession-p03.md  capitaine-wallace-2008-concise-cio.md  carpentier-2018-rbd-analytical-derivatives.md  carpentier-2019-pinocchio.md  ccsds-508-0-b-1-cdm.md  charlot-2020-icrf3.md  crassidis-2003-ukf-attitude.md  dicairano-2012-mpc-rendezvous.md  dodge-2000-swri-slosh-update.md  folkner-2009-de421.md  foster-estes-1992-jsc-25898-pc.md  hoots-roehrich-1980-spacetrack-report-3.md  iau-sofa-2023-software-collection-c.md  icgem-gfz-landing-snapshot.md  iers-conventions-2010.md  igrf14-2024-coefficients.md  julier-uhlmann-1997-ukf.md  kaplan-2005-usno-circular-179.md  kelso-celestrak-tle-format.md  krisko-2019-ordem-3-1-user-guide.md  lefferts-1982-mekf.md  lemoine-2014-grgm900c.md  likins-1970-flexible-space-vehicles.md  lyddane-1963-small-eccentricity-inclination.md  markley-2003-attitude-error-representations.md  mathews-2002-mhb2000-nutation.md  mistry-2010-floating-base-inverse-dynamics.md  naif-spice-required-reading.md  newman-2022-cara-best-practices.md  orekit-holmes-featherstone-impl.md  park-2021-de440-de441.md  pavlis-2012-egm2008.md  picone-2002-nrlmsise-00.md  (+9 more)
docs/wiki/synthesis/: audit-architecture-2026-05-05.md  audit-requirements-2026-05-05.md  audit-subsystems-2026-05-05.md  audit-summary-2026-05-05.md  development-state-2026-05-05.md
include/apsis/: version.h
include/apsis/force/: iforce_model.h  (+3 more)
src/: CMakeLists.txt  version.cc
src/ephemeris/: CMakeLists.txt  spice_ephemeris.cc
src/force/: CMakeLists.txt  point_mass.cc  spherical_harmonic.cc  third_body.cc
src/frames/: CMakeLists.txt  frame_bias.cc  icrs_itrs.cc  teme.cc
src/integrate/: CMakeLists.txt  dop853.cc  dop853_coeffs.h  dp54.cc  dp54_coeffs.h  encke_wrapper.cc  gauss_jackson_8.cc  gj8_coeffs.h  gj8_starter.cc  gj8_starter.h  yoshida4.cc
src/math/: CMakeLists.txt  f_and_g_series.cc  f_and_g_series.h
src/time/: CMakeLists.txt  convert.cc  eop_table.cc
tests/: CMakeLists.txt
tests/conformance/: CMakeLists.txt  force_model_ve_contract.cc  integrator_kepler.cc  integrator_phi.cc
tests/regression/: CMakeLists.txt  iss_vector.cc  jpl_de_roundtrip.cc  leo_kepler_24h.cc
tests/smoke/: CMakeLists.txt  version_smoke.cc
tests/unit/: CMakeLists.txt
tests/unit/data/: CMakeLists.txt  integrity_test.cc
tests/unit/ephemeris/: CMakeLists.txt  spice_concurrent_test.cc  spice_test.cc
tests/unit/force/: CMakeLists.txt  point_mass_test.cc  spherical_harmonic_test.cc  third_body_test.cc
tests/unit/frames/: CMakeLists.txt  frame_mixing_compile_fail.cc  frame_mixing_guard.cc  round_trip_test.cc  transform_test.cc
tests/unit/integrate/: CMakeLists.txt  encke_test.cc
tests/unit/math/: CMakeLists.txt  types_smoke.cc
tests/unit/time/: CMakeLists.txt  eop_table_test.cc  scale_mixing_compile_fail.cc  scale_mixing_guard.cc  time_test.cc
tools/dev/: recompute_dop853_hash.sh  recompute_gj8_hash.sh
tools/lint/: cspice_seam.py  req_traceability.py
(+21 files in other folders)
